--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.2.0",
     "@hookform/resolvers": "^3.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@tanstack/react-query": "^4.35.3",
@@ -28,7 +29,6 @@
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "postcss": "^8.4.38",
-    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
@@ -43,6 +43,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13"
+    "@tailwindcss/typography": "^0.5.13",
+    "prisma": "^5.15.1"
   }
 }
